# Federation-Agent

./: .gitignore  README.rst  fc-mgmt-bridge-share.py  fc-mgmt-share.py  netfa.conf  netfa.conf.sample  requirments.txt  setup-fa-ovs.sh  setup-ovn.sh  setup-ovs.sh  setup.cfg  setup.py
netfa/: README.rst  dove_fa.py  fa_bridge.py  fa_ovn_controller.py  fa_sdn_controller.py  net_fa.py
ryu/app/: dove_fa.py  fa_ovn_controller.py
