[metadata]
name = net-fa
summary = Ryu based network federation agent
platform = linux
classifier =
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Operating System :: Unix
keywords =
    openflow
    openvswitch
    openstack

[files]
packages =
    netfa

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_rpm]
Release = 1
Group = Applications/Accessories
Requires = ryu, requests, json, jsonschema, inspect

[global]
setup-hooks =
    pbr.hooks.setup_hook
